# secret-scanner

./: .gitignore  BUILD_REPORT.md  DEVELOPMENT.md  EXAMPLES.md  GITHUB_INTEGRATION_COMPLETE.md  GITHUB_SCANNING.md  INDEX.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UI_GUIDE.md  info.txt  instructions.txt  overview.txt  push_to_github.sh  pyproject.toml  requirements.txt  setup.sh  stats.sh
.github/workflows/: ci.yml
config/: default_rules.yaml
examples/: safe_config.py
hooks/: pre-commit.sh
src/secret_scanner/: __init__.py  cli.py  config.py  github_scanner.py  scanner.py  ui.py
src/secret_scanner/detectors/: __init__.py  entropy.py
src/secret_scanner/reporters/: __init__.py  reporter.py
tests/: conftest.py  test_config.py  test_entropy.py  test_scanner.py
